补充完整拒绝策略部分代码